# VelEng

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  VelEngConfig.h.in  VelEngineConfig.h.in
VelEng/: CMakeLists.txt  VelEngConfig.h.in  VelGL.cpp  VelGL.h
VelEng/VAssets/: CMakeLists.txt  VAssets.cpp  VAssets.h
VelEng/VBuffers/: CMakeLists.txt  VBuffers.h
VelEng/VCameras/: CMakeLists.txt  VCamera.cpp  VCamera.h
VelEng/VDrawable/: CMakeLists.txt  VDrawableObject.cpp  VDrawableObject.h  VMesh.cpp  VMesh.h  VModel.cpp  VModel.h  VScene.cpp  VScene.h  VSky.cpp  VSky.h
VelEng/VGeo/: CMakeLists.txt  VGeo.h  VPlane.cpp  VPlane.h  VVertices.h
VelEng/VInput/: CMakeLists.txt  VInput.cpp  VInput.h
VelEng/VLights/: CMakeLists.txt  VLight.cpp  VLight.h
VelEng/VMaterials/: CMakeLists.txt  VMaterial.cpp  VMaterial.h
VelEng/VOpenGL/: CMakeLists.txt
VelEng/VOptions/: CMakeLists.txt  VOptions.cpp  VOptions.h
VelEng/VRendering/: CMakeLists.txt  VFrameBuffer.cpp  VFramebuffer.h  VGBuffer.cpp  VGBuffer.h  VRenderer.cpp  VRenderer.h
VelEng/VShaders/: CMakeLists.txt  VGLSLShader.cpp  VGLSLShader.h  VShaderLocations.h
VelEng/VTextures/: CMakeLists.txt  VFBOTextures.cpp  VFBOTextures.h  VTexture.cpp  VTexture.h
VelEng/VUti/: VelEngUti.cpp  VelEngUti.h
VelEng/VWindow/: CMakeLists.txt  VWindow.cpp  VWindow.h  VWindowInfo.cpp  VWindowInfo.h
VelEng/include/rendering/: Camera.h  Descriptors.h  GPUAllocator.h  Lighting.h  Material.h  Renderable.h
VelEng/include/utils/: DeletionQueue.h  RenderThreadPool.h  TSQueue.h
VelEng/res/: CMakeLists.txt
VelEng/res/shaders/: directional.frag  directional.vert  gltf_mesh.frag  gltf_mesh.vert  gpass.frag  gpass.vert  gradient.comp  gradient_push.comp  lights.vert  lpass.frag  lpass.vert  mesh.frag  mesh.vert  skybox.frag  texture.frag  triangle.vert
VelEng/res/shaders/brdf/: brdf.glsl  lighting.glsl  shadowPass.frag  shadowPass.vert  shadows.glsl
VelEng/res/shaders/common/: cameraLayout0.glsl  vertex.glsl
VelEng/res/shaders/shadows/: point.vert
VelEng/res/shaders/spv/: directional.vert.spv  gltf_mesh.frag.spv  gltf_mesh.vert.spv  gpass.frag.spv  gpass.vert.spv  gradient.comp.spv  gradient_push.comp.spv  lpass.frag.spv  lpass.vert.spv  shadowPass.vert.spv  shadow_point_light.vert.spv  skybox.frag.spv  texture.frag.spv
VelEng/src/: CMakeLists.txt  VelEng.cpp  VelEng.h
VelEng/src/rendering/: Camera.cpp  Camera.h  Deferred.cpp  Deferred.h  Descriptors.cpp  Descriptors.h  Frames.cpp  Frames.h  GPUAllocator.cpp  GPUAllocator.h  Images.cpp  Images.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  MeshLoader.cpp  MeshLoader.h  Pipeline.cpp  PipelineBuilder.cpp  PipelineBuilder.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  SceneLights.cpp  SceneLights.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h  Swapchain.cpp  Swapchain.h  VulkanTypes.h  VulkanUtils.cpp  VulkanUtils.h
VelEng/src/ui/: CMakeLists.txt  GUIValue.h  VelImgui.cpp  VelImgui.h
VelEng/src/utils/: CMakeLists.txt  RenderThreadPool.cpp
VelEng/vAssets/: vAssets.cpp  vAssets.h
VelEng/vCameras/: vCamera.h
VelEng/vDrawable/: CMakeLists.txt  vDrawableObject.cpp  vDrawableObject.h  vMesh.cpp  vMesh.h  vScene.cpp  vScene.h  vSky.h
VelEng/vGeo/: vGeo.h  vLine.h  vPlane.cpp  vPlane.h  vVertices.h
VelEng/vGraphics/: CMakeLists.txt
VelEng/vGraphics/vBuffers/: CMakeLists.txt  vBuffers.cpp  vBuffers.h
VelEng/vGraphics/vCameras/: CMakeLists.txt  vCamera.cpp  vCamera.h
VelEng/vGraphics/vDrawable/: CMakeLists.txt  vDrawableObject.h  vMesh.cpp  vMesh.h  vModel.cpp  vModel.h  vScene.cpp  vScene.h  vSky.cpp
VelEng/vGraphics/vLights/: vLight.cpp  vLight.h
VelEng/vGraphics/vMaterials/: CMakeLists.txt  vMaterial.cpp  vMaterial.h  vMaterialPipeline.cpp  vMaterialPipeline.h
VelEng/vGraphics/vRendering/: vFrameBuffer.cpp  vFramebuffer.h  vRenderer.cpp  vRenderer.h
VelEng/vGraphics/vTextures/: vFBOTextures.cpp  vFBOTextures.h  vTexture.cpp
VelEng/vGraphics/vVulkan/: CMakeLists.txt  vVulkan.cpp  vVulkan.h  vVulkanBuffer.cpp  vVulkanBuffer.h  vVulkanCommands.cpp  vVulkanCommands.h  vVulkanCommon.cpp  vVulkanCommon.h  vVulkanDebug.cpp  vVulkanDebug.h  vVulkanDevice.cpp  vVulkanDevice.h  vVulkanFramebuffer.cpp  vVulkanFramebuffer.h  vVulkanImage.cpp  vVulkanImage.h  vVulkanPipeline.cpp  vVulkanPipeline.h  vVulkanRenderPass.cpp  vVulkanRenderPass.h  vVulkanShader.cpp  vVulkanShader.h  vVulkanSwapChain.cpp  vVulkanSwapChain.h  vVulkanTexture.cpp  vVulkanTexture.h  vVulkanUtil.cpp  vVulkanUtil.h
VelEng/vGraphics/vWindow/: CMakeLists.txt  vWindow.cpp  vWindow.h
VelEng/vInput/: vInput.cpp  vInput.h
VelEng/vLights/: vLight.cpp  vLight.h
VelEng/vMaterials/: vMaterial.cpp  vMaterial.h
VelEng/vOptions/: CMakeLists.txt  vOptions.h
VelEng/vRendering/: CMakeLists.txt  vFrameBuffer.cpp  vFramebuffer.h  vGBuffer.cpp  vGBuffer.h  vRenderer.cpp
VelEng/vScripts/: CMakeLists.txt  vScripts.cpp  vScripts.h
VelEng/vShaders/: vGLSLShader.cpp  vGLSLShader.h  vShaderLocations.h
VelEng/vTextures/: CMakeLists.txt  vFBOTextures.h  vTexture.h
VelEng/vUti/: CMakeLists.txt  VelEngUti.cpp  VelEngUti.h
VelEng/vWindow/: vWindow.cpp  vWindow.h  vWindowInfo.cpp
VelTest/: CMakeLists.txt  VelTest.cpp  VelTestConfig.h.in
VelTest/Resources/MirrorShader/: shader.frag  shader.vert
VelTest/Resources/Shaders/: BasicFragment.frag  BasicVertex.vert  NormalVectors.frag  NormalVectors.geom
VelTest/Resources/Shaders/Deffered/: GPass.frag  GPass.geom  GPass.vert  LPass.frag  LPass.vert  LPassDebug.frag  ShadowMapping.frag  ShadowMapping.vert  ShadowsCube.frag  ShadowsCube.geo  ShadowsCube.geom  ShadowsCube.vert  Skybox.frag  Skybox.vert
VelTest/Resources/Shaders2/: shader.frag  shader.vert
VelTest/Resources/Skybox/: shader.frag
VelUti/: CMakeLists.txt  VSignal.h  VTime.cpp  VTime.h
cmake/modules/: CommonFunctions.cmake
include/: VelEng.h
include/Actors/: Actor.h  Component.h  RenderComponent.h
include/Assets/: Asset.h  AssetsManager.h
lib/: assimp.lib
libs/: SOIL.lib
libs/x64/: glfw3.lib
src/: VelEng.cpp
tests/: CMakeLists.txt  VelTest.cpp
(+89 files in other folders)
